--- a/src/db.properties
+++ b/src/db.properties
@@ -1,5 +1,5 @@
 dataSource.driverClass=com.mysql.jdbc.Driver
-dataSource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/mybatis
+dataSource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/shaoqing
 dataSource.user=root
 dataSource.password=tiger
 dataSource.maxPoolSize=20
