未完待续：日志  aop   mybatis中的一些标签  如：别名等

--- a/src/db.properties
+++ b/src/db.properties
@@ -1,8 +1,5 @@
-dataSource.driverClass=com.mysql.jdbc.Driver
-dataSource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/shaoqing
-dataSource.user=root
-dataSource.password=tiger
-dataSource.maxPoolSize=20
-dataSource.maxIdleTime=1000
-dataSource.minPoolSize=6
-dataSource.initialPoolSize=5
+#本地服务器
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/shaoqing?characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=tiger
